Rename category to genre
